Made use of my getRoutePath API to route to background

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 <div 
 id="background-div"
 class="d-flex justify-content-center align-items-center pt-4 pb-4"
-(click)="routeToBackground($event)">
+(click)="routeToHome($event)"
+>
     <router-outlet></router-outlet>
 </div>
 
