--- a/src/app/components/utility/session-update-wrapper/session-update-wrapper.component.html
+++ b/src/app/components/utility/session-update-wrapper/session-update-wrapper.component.html
@@ -11,10 +11,16 @@
     <div class="flex-1">
         <ng-container #fieldComponent></ng-container>
     </div>
+    <!-- Create Modal -->
+    <div class="ml-2">
+        <app-session-update-modal [session_pk_subject]="null" [icon]="'fa-plus'"></app-session-update-modal>
+    </div>
+    <!-- Update Modal -->
     <div class="ml-2">
         <app-session-update-modal [session_pk_subject]="formControl.valueChanges"></app-session-update-modal>
     </div>
+    <!-- Delete Modal -->
     <div class="ml-2">
-        <app-session-update-modal [session_pk_subject]="null" [icon]="'fa-plus'"></app-session-update-modal>
+        <app-session-delete-modal [session_pk_subject]="formControl.valueChanges"></app-session-delete-modal>
     </div>
 </div>
