--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
         <div class="mb-3">{{extraMessage}}</div>
         <form>
             <formly-form [model]="model" [fields]="fields" [form]="form"></formly-form>
-            <button class="btn btn-secondary" (click)="onSubmit()">Login</button>
+            <div class="btn btn-secondary" (click)="onSubmit()">Login</div>
         </form>
     </article>
 </div>
