--- a/src/app/components/utility/session-update-modal/session-update-modal.component.html
+++ b/src/app/components/utility/session-update-modal/session-update-modal.component.html
@@ -2,9 +2,9 @@
     <!-- Header -->
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">Update {{ model.name }}</h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss()">
-        <span aria-hidden="true">&times;</span>
-        </button>
+        <div class="close" aria-label="Close" (click)="modal.dismiss()">
+            <span aria-hidden="true">&times;</span>
+        </div>
     </div>
 
     <!-- Body -->
