--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,13 +2,13 @@
     <!-- Brand -->
     <a routerLink="{{constants.getRoutePath(router, 'home1')}}" class="navbar-brand mr-5 ml-5"><strong> Aldrune Wiki </strong></a>
     <!-- Collapsed navbar toggle -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <div class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>
+    </div>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <!-- Search Bar -->
-        <form class="my-2 my-lg-0 flex-1" (submit)="search()">
+        <form class="my-2 flex-1" (submit)="search()">
             <div class="searchbar form-control">
                 <i class="fa fa-2x fa-search mr-2"></i>
                 <input class="search-input" type="search" name="search" [(ngModel)]="searchString" placeholder="Search Articles..." aria-label="Search">
