--- a/src/app/components/utility/delete-toggle/delete-toggle.component.html
+++ b/src/app/components/utility/delete-toggle/delete-toggle.component.html
@@ -4,7 +4,7 @@
     </div>
     <div *ngIf="isInDeleteState" class="delete-request">
         <span class="mr-3"> <strong>{{deleteMessage}}</strong> </span>  
-        <button class="btn btn-outline-danger float-right mr-2" (click)="emitDeleteEvent()"> Yes </button>
-        <button class="btn btn-outline-secondary float-right" (click)="toggleDeleteState()"> No </button>
+        <div class="btn btn-outline-danger float-right mr-2" (click)="emitDeleteEvent()"> Yes </div>
+        <div class="btn btn-outline-secondary float-right" (click)="toggleDeleteState()"> No </div>
     </div>
 </div>
