--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,36 +46,6 @@ body {
     line-height: 1.65;
 }
 
-.button {
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	-ms-appearance: none;
-	appearance: none;
-	-moz-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-	-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-	-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-	transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-	background-color: transparent;
-	border-radius: 4px;
-	border: 0;
-	color: #ffffff !important;
-	cursor: pointer;
-	font-size: 0.8rem;
-	font-weight: 600;
-	height: 2.75rem;
-	letter-spacing: 0.03rem;
-	line-height: 2.75rem;
-	outline: 0;
-	padding: 0 1.25rem 0 1.35rem;
-	text-align: center;
-	text-decoration: none;
-	text-transform: uppercase;
-	white-space: nowrap;
-	display: flex !important;
-	justify-content: center;
-	align-items: center;
-}
-
 //headings
 h1, h2, h3, h4, h5, h6 {
     color: #ffffff;
@@ -98,23 +68,6 @@ h2{
 	font-size: 1.5rem!important;
 }
 
-// Button
-
-.button:hover {
-	background-color: rgba(255, 255, 255, 0.175);
-}
-
-.button:active{
-	background-color: rgba(255, 255, 255, 0.175);
-}
-
-.button.icon:before{
-	margin-right: 0.5em;
-}
-
-.button.fit{
-	width: 100%;
-}
 
 //Background
 #bg {
@@ -218,7 +171,7 @@ a:hover{
 }
 
 .main{
-    width: 60rem;
+    max-width: 60rem;
     background-color:rgba(27, 31, 34, 0.85);
     border-radius: 6px;
     padding: 2.5rem 2.5rem 5rem 2.5rem;
@@ -286,7 +239,7 @@ h2{
 	text-decoration: underline;
 }
 
-@media(max-width: 992px){
+@media(max-width: 960px){
 	.main{
 		max-width: 60rem;
 	}
