Made basic article background more mobile friendly

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -41,7 +41,7 @@
 .search-input{
     background-color: #1f1e1f;
     border: none;
-    width: 100%;
+    max-width: 100%;
     outline: none;
     color: white;
 }
