--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,7 +171,8 @@ a:hover{
 }
 
 .main{
-    max-width: 60rem;
+	max-width: 60rem;
+	width: 100vw;
     background-color:rgba(27, 31, 34, 0.85);
     border-radius: 6px;
     padding: 2.5rem 2.5rem 5rem 2.5rem;
